--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,24 +1,21 @@
 @media screen and (min-width: 430px) {        
     /* Nav */
 
+    #menu {
+      display: none;
+    }
+
+
      .nav_links {
        padding: 1rem;
-       height: 42px;
        flex-direction: row;
        justify-content: flex-end; 
-       justify-items: flex-end;
+       height: 60px;
      }
     
      .link {
-       display: block;
-       width: 100%;
        border-bottom: none;
-       text-align: center;
-
-        padding: .5rem 1rem;
-        font-weight: 600;
-        font-size: 12px;
-        transition: .03s;
+       width: auto;
      }
     
      .link a:hover {
@@ -28,63 +25,19 @@
      /* main */
     
      main, footer {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        gap: 1rem;
         margin: 1rem;
      }
     
-     .main-title {
-        grid-column: 1/5;
-        background-color: var(--accent-color);
-        color: var(--secondary-text-color);
-        padding: var(--box-padding);
-     }
-    
-     .card {
-        background-color: var(--header-background-color);
-        padding: var(--box-padding);
-     }
-    
-     .card h2 {
-        font-family: var(--headings-font);
-        font-weight: 500;
-        font-size: 18px;
-        margin-bottom: 1rem;
-     }
-    
      .week-list ul {
-        display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        margin: 0 2rem 0 2rem ;
-     }
-    
-     .week {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-     }
-    
-     .week h3 {
-        font-family: var(--body-font);
-        font-size: 14px;
-        font-weight: 700;
-        text-transform: uppercase;
-        letter-spacing: .5px;
+        margin: 0 2rem 0 2rem;
      }
     
      .week a {
         text-decoration: none;
         color: var(--text-color);
      }
-    
-     .week-list li {
-        font-size: 14px;
-        font-weight: 500;
-        list-style: none;
-        text-transform: capitalize;
-     }
+
     
      .week a:hover {
         color: var(--hover-color);
@@ -93,5 +46,9 @@
      .learning-activities {
         grid-column: 1/4;
      }   
+
+     .information {
+      grid-column: 4/5;
+     }
 }
 
