--- a/styles/base.css
+++ b/styles/base.css
@@ -77,6 +77,9 @@ header {
    content: "x";
 }
 
+.hide {
+   display: none;
+}
 
  .nav_links {
     margin: auto;
@@ -105,6 +108,16 @@ header {
    text-decoration: none;
    color: var(--text-color);
 }
+
+
+#darkBtn {
+   position: absolute;
+   top: 10px;
+   right: 24px;
+   cursor: pointer;
+}
+
+
 
 
  /* main */
