--- a/styles/larger.css
+++ b/styles/larger.css
@@ -4,7 +4,10 @@
     #menu {
       display: none;
     }
-
+    
+    .hide {
+      display: block;
+   }
 
      .nav_links {
        padding: 1rem;
