--- a/styles/base.css
+++ b/styles/base.css
@@ -65,7 +65,7 @@ header {
    background-color: var(--header-background-color);
    display: flex;
    padding: 1rem;
-   padding-bottom: 0;
+   padding-bottom: 1rem;
    color: var(--text-color);
 }
 
@@ -131,13 +131,27 @@ header {
     max-width: 1200px;
  }
 
+
  .hero {
    grid-column: 1/5;
- }
- 
- .temple {
+   position: relative;
  }
 
+ .hero-title {
+   font-family: var(--headings-font);
+   color: var(--secondary-text-color);
+   font-size: 1rem;
+
+   position: absolute;
+   bottom: 1rem;
+   left: 1rem;
+}
+
+ .hero img {
+   width: 100%;
+   height: auto;
+}
+ 
  .main-title {
     grid-column: 1/5;
     background-color: var(--accent-color);
@@ -212,6 +226,22 @@ header {
  .learning-activities, .information {
     grid-column: 1/5;
  }
+
+ .information p {
+   font-family: var(--body-font);
+   font-size: 14px;
+   font-weight: 600;
+ }
+
+#counter {
+   font-weight: 400;
+}
+
+.map {
+   grid-column: 1/5;
+   width: 100%;
+   height: auto;
+}
 
 
  /* footer */
