--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -2,6 +2,8 @@
     --primary-color: #355834;
     --secondary-color: #e8d0a4;
     --accent-color: #6E633D;
+    --dark-background-color: #5A482C;
+    --light-background-color: #FFFBF4;
 
     --text-color-gradient: white;
     --text-color: #241603;
@@ -310,7 +312,7 @@ h1, h2, h3 {
 .event-heading {
     display: flex;
     flex-direction: column;
-    gap: 4;
+    gap: 4px;
 }
 
 .event-date {
@@ -425,7 +427,7 @@ h1, h2, h3 {
 }
 
 footer {
-    background-color: var(--accent-color);
+    background-color: var(--dark-background-color);
     padding: 3rem 4rem;
     display: flex;
     gap: 2rem;
@@ -453,13 +455,166 @@ footer {
     font-size: 16px;
     font-family: var(--heading-font);
     font-weight: 300;
-    color: var(--secondary-color);
+    color: white;
     margin-bottom: .75rem;
 }
 
 .project-info p {
     font-size: 12px;
     font-family: var(--body-font);
-    color: var(--secondary-color);
+    color: white;
     margin-bottom: .5rem;
+}
+
+/* --------------------------------------------------------------------------------------------------------------------------------- */
+/* --------------------------------------------------------------------------------------------------------------------------------- */
+/* Discover Page ----------------------------------------------------------------------------------------------------------------- */
+/* --------------------------------------------------------------------------------------------------------------------------------- */
+/* --------------------------------------------------------------------------------------------------------------------------------- */
+
+.discover-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 40px;
+    margin: 40px;
+}
+
+.side-bar {
+    grid-column: 1/3;
+}
+
+.side-bar-title {
+    font-weight: 300;
+    font-size: 20px;
+    color: var(--accent-color);
+    text-align: center;
+}
+
+.card {
+    padding: 1rem;
+    border: solid var(--secondary-color) 1px;
+    border-radius: .5rem;
+    background-color: var(--light-background-color);
+    margin: 1rem 0;
+}
+
+.card-icon {
+    display: flex;
+    justify-content: center;
+    margin-bottom: .5rem;
+}
+
+.card-title {
+    color: var(--accent-color);
+    font-family: var(--heading-font);
+    font-weight: 300;
+    font-size: 1rem;
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.card-paragraph {
+    font-size: 12px;
+    font-family: var(--body-font);
+    line-height: 1rem;
+    color: var(--text-color);
+}
+
+.calendar-event {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: .5rem;
+    margin: .25rem 0;
+    font-family: var(--body-font);
+    line-height: 1.1rem;
+}
+
+.calendar-event:hover {
+    background-color: var(--secondary-color);
+    border: none;
+    border-radius: .25rem;
+    cursor: pointer;
+}
+
+.cal-text {
+    display: flex;
+    flex-direction: row;
+    gap: .5rem;
+}
+
+.cal-date {
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--accent-color);
+}
+
+.cal-event {
+    font-size: 14px;
+    color: var(--text-color);
+}
+
+.features {
+    grid-column: 3/7;
+}
+
+.features-title{
+    font-weight: 300;
+    color: var(--primary-color);
+    text-align: center;
+    font-size: 48px;
+}
+
+.feature-card {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 1rem;
+    margin: 2rem 0;
+}
+
+.feature-text {
+    grid-column: 1/5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2rem 0;
+}
+
+.feature-title {
+    font-size: 24px;
+    font-weight: 300;
+    color: var(--primary-color);
+    margin-bottom: .5rem;
+    text-align: center;
+}
+
+.feature-paragraph {
+    font-family: var(--body-font);
+    font-size: 14px;
+    line-height: 1rem;
+    color: var(--text-color);
+}
+
+.feature-btn {
+    border: none;
+    border-radius: .5rem;
+    width: fit-content;
+    padding: 12px 16px;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.feature-btn:hover {
+    background-color: var(--dark-background-color);
+    color: var(--secondary-color);
+} 
+
+.feature-card img {
+    grid-column: 5/12;
+    width: 100%;
+    height: auto;
+    border: none;
+    border-radius: .5rem;
 }
